tests/generic.m31.ref
Signature cat is declared.
Constant dwarf is declared.
Constant urist is declared.
ankle is defined.
⊢ {person = dwarf, pet = urist} : cat
[("person", (⊢ dwarf : Type)), ("pet", (⊢ urist : dwarf))]
[("person", (person₁₂ : Type 
             ⊢ person₁₂ : Type), (⊢ Type : Type)),
 ("pet",
  (person₁₂ : Type 
   pet₁₃ : person₁₂ 
   ⊢ pet₁₃ : person₁₂),
  (person₁₂ : Type 
   ⊢ person₁₂ : Type))]
((⊢ {person = dwarf, pet = urist} : cat), "pet")
tt
⊢ {person = dwarf, pet = urist} : cat
The command failed with error:
File "./generic.m31", line 30, characters 25-29: Typing error
  the expression dwarf should have type dwarf but has type Type
Constant A is declared.
eq₁₄ : A ≡ cat 
⊢ {person = dwarf, pet = urist} : A
⊢ {person = dwarf, pet = urist}.pet : {person = dwarf, pet = urist}.person
first_proj is defined.
⊢ {person = dwarf, pet = urist}.person : Type
last_proj is defined.
⊢ {person = dwarf, pet = urist}.pet : {person = dwarf, pet = urist}.person
The command failed with error:
File "./generic.m31", line 6, characters 18-22: Typing error
  this expression should be a signature, found dwarf
The command failed with error:
File "./generic.m31", line 61, characters 6-23: Typing error
  Cannot project field gold from signature cat: no such field
